--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -33,7 +33,7 @@
             {% else %}
                 <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-user"></span></a>
             {% endif %}
-            <h1><img src="{% static "index.jpeg" %}" alt="My image"></h1>
+            <h1><a href="\"><img src="{% static "index.jpeg" %}" alt="My image"></a></h1>
             <h2>{{ KUBE_POD_NAME }}</h2>
         </div>
         <div class="content container">
